@@ -83,7 +83,7 @@ class Page
   button(:button_value, :value => 'Click Me')
   button(:button_class_index, :class => "button_class", :index => 0)
   button(:button_name_index, :name => "button_name", :index => 0)
-  button(:button_css, :css => "input[type='submit']")
+  button(:button_css, :css => ".button_class")
 
   button(:button_image_id, :id => 'button_image_id')
   button(:button_image_src, :src => 'images/submit.gif')
@@ -178,7 +178,7 @@ class Page
   hidden_field(:hidden_field_class, :class => "hidden_field_class")
   hidden_field(:hidden_field_name, :name => "hidden_field_name")
   hidden_field(:hidden_field_xpath, :xpath => "//input[@type='hidden']")
-  hidden_field(:hidden_field_css, :css => "input[type='hidden']")
+  hidden_field(:hidden_field_css, :css => ".hidden_field_class")
   hidden_field(:hidden_field_tag_name, :tag_name => "input[type='hidden']")
   hidden_field(:hidden_field_index, :index => 0)
   hidden_field(:hidden_field_text, :text => "")
@@ -209,7 +209,7 @@ class Page
   text_area(:text_area_class, :class => "text_area_class")
   text_area(:text_area_name, :name => "text_area_name")
   text_area(:text_area_xpath, :xpath => "//textarea")
-  text_area(:text_area_css, :css => "textarea")
+  text_area(:text_area_css, :css => ".text_area_class")
   text_area(:text_area_tag_name, :tag_name => "textarea")
   text_area(:text_area_index, :index => 0)
   text_area(:text_area_text, :text => "")
